test_output_verbose.txt

[1m[46m RUN [49m[22m [36mv4.0.16 [39m[90mC:/Users/hyper/workspace/borg[39m

[90mstdout[2m | packages/core/test/CoreInfra.test.ts
[22m[39m[MCPServer] Starting imports...
[MCPServer] Γ£ô @modelcontextprotocol/sdk
[MCPServer] Γ£ô path/url
[MCPServer] Γ£ô Router
[MCPServer] Γ£ô ModelSelector
[MCPServer] Γ£ô ws/http
[MCPServer] Γ£ô SkillRegistry
[MCPServer] Γ£ô All Tools & ChainExecutor
[MCPServer] Γ£ô Council
[MCPServer] Γ£ô PermissionManager
[MCPServer] All imports complete!

[90mstdout[2m | packages/core/test/CoreInfra.test.ts[2m > [22m[2mCore Infrastructure Tools (Phase 20)[2m > [22m[2mshould execute lsp_symbol_search
[22m[39mRouter initialized

stderr | packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute lsp_symbol_search
[MCPServer] ≡ƒòÆ Scheduling Auto-Drive Start in 5s...

[90mstdout[2m | packages/core/test/CoreInfra.test.ts[2m > [22m[2mCore Infrastructure Tools (Phase 20)[2m > [22m[2mshould execute lsp_definition
[22m[39mRouter initialized

stderr | packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute lsp_definition
[MCPServer] ≡ƒòÆ Scheduling Auto-Drive Start in 5s...

[90mstdout[2m | packages/core/test/CoreInfra.test.ts[2m > [22m[2mCore Infrastructure Tools (Phase 20)[2m > [22m[2mshould execute code_mode_execute
[22m[39mRouter initialized

stderr | packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute code_mode_execute
[MCPServer] ≡ƒòÆ Scheduling Auto-Drive Start in 5s...

[90mstdout[2m | packages/core/test/CoreInfra.test.ts[2m > [22m[2mCore Infrastructure Tools (Phase 20)[2m > [22m[2mshould execute plan_mode_switch
[22m[39mRouter initialized

stderr | packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute plan_mode_switch
[MCPServer] ≡ƒòÆ Scheduling Auto-Drive Start in 5s...

[90mstdout[2m | packages/core/test/CoreInfra.test.ts[2m > [22m[2mCore Infrastructure Tools (Phase 20)[2m > [22m[2mshould execute plan_mode_stage
[22m[39mRouter initialized

stderr | packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute plan_mode_stage
[MCPServer] ≡ƒòÆ Scheduling Auto-Drive Start in 5s...

[90mstdout[2m | packages/core/test/CoreInfra.test.ts[2m > [22m[2mCore Infrastructure Tools (Phase 20)[2m > [22m[2mshould execute plan_mode_status
[22m[39mRouter initialized

stderr | packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute plan_mode_status
[MCPServer] ≡ƒòÆ Scheduling Auto-Drive Start in 5s...

 [31m├ù[39m packages/core/test/CoreInfra.test.ts[2m > [22mCore Infrastructure Tools (Phase 20)[2m > [22mshould execute lsp_symbol_search[32m 23[2mms[22m[39m
[31m   ΓåÆ Unexpected token 'E', "Error: [vi"... is not valid JSON[39m
 [31m├ù[39m packages/core/test/CoreInfra.test.ts[2m > [22mCore Infrastructure Tools (Phase 20)[2m > [22mshould execute lsp_definition[32m 3[2mms[22m[39m
[31m   ΓåÆ Unexpected token 'E', "Error: [vi"... is not valid JSON[39m
 [31m├ù[39m packages/core/test/CoreInfra.test.ts[2m > [22mCore Infrastructure Tools (Phase 20)[2m > [22mshould execute code_mode_execute[32m 4[2mms[22m[39m
[31m   ΓåÆ Unexpected token 'E', "Error: [vi"... is not valid JSON[39m
 [31m├ù[39m packages/core/test/CoreInfra.test.ts[2m > [22mCore Infrastructure Tools (Phase 20)[2m > [22mshould execute plan_mode_switch[32m 16[2mms[22m[39m
[31m   ΓåÆ expected 'Error: [vitest] No "TerminalTools" exΓÇª' to contain 'Switched to BUILD mode'[39m
 [31m├ù[39m packages/core/test/CoreInfra.test.ts[2m > [22mCore Infrastructure Tools (Phase 20)[2m > [22mshould execute plan_mode_stage[32m 6[2mms[22m[39m
[31m   ΓåÆ expected 'Error: [vitest] No "TerminalTools" exΓÇª' to contain 'Staged changes for src/index.ts'[39m
 [31m├ù[39m packages/core/test/CoreInfra.test.ts[2m > [22mCore Infrastructure Tools (Phase 20)[2m > [22mshould execute plan_mode_status[32m 4[2mms[22m[39m
[31m   ΓåÆ expected 'Error: [vitest] No "TerminalTools" exΓÇª' to contain 'Mode: PLAN'[39m

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ» Failed Tests 6 ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»

 FAIL  packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute lsp_symbol_search
SyntaxError: Unexpected token 'E', "Error: [vi"... is not valid JSON
 Γ¥» packages/core/test/CoreInfra.test.ts:142:30
    140|     it('should execute lsp_symbol_search', async () => {
    141|         const result = await server.executeTool('lsp_symbol_search', {ΓÇª
    142|         const content = JSON.parse(result.content[0].text);
       |                              ^
    143|         expect(content[0].name).toBe('TestSymbol');
    144|     });

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[1/6]ΓÄ»

 FAIL  packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute lsp_definition
SyntaxError: Unexpected token 'E', "Error: [vi"... is not valid JSON
 Γ¥» packages/core/test/CoreInfra.test.ts:148:30
    146|     it('should execute lsp_definition', async () => {
    147|         const result = await server.executeTool('lsp_definition', { fiΓÇª
    148|         const content = JSON.parse(result.content[0].text);
       |                              ^
    149|         expect(content.uri).toBe('file://def.ts');
    150|     });

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[2/6]ΓÄ»

 FAIL  packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute code_mode_execute
SyntaxError: Unexpected token 'E', "Error: [vi"... is not valid JSON
 Γ¥» packages/core/test/CoreInfra.test.ts:154:30
    152|     it('should execute code_mode_execute', async () => {
    153|         const result = await server.executeTool('code_mode_execute', {ΓÇª
    154|         const content = JSON.parse(result.content[0].text);
       |                              ^
    155|         expect(content.success).toBe(true);
    156|         expect(content.result).toBe('Executed');

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[3/6]ΓÄ»

 FAIL  packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute plan_mode_switch
AssertionError: expected 'Error: [vitest] No "TerminalTools" exΓÇª' to contain 'Switched to BUILD mode'

- Expected
+ Received

- Switched to BUILD mode
+ Error: [vitest] No "TerminalTools" export is defined on the "@borg/tools" mock. Did you forget to return it from "vi.mock"?
+ If you need to partially mock a module, you can use "importOriginal" helper inside:
+

 Γ¥» packages/core/test/CoreInfra.test.ts:161:40
    159|     it('should execute plan_mode_switch', async () => {
    160|         const result = await server.executeTool('plan_mode_switch', { ΓÇª
    161|         expect(result.content[0].text).toContain('Switched to BUILD moΓÇª
       |                                        ^
    162|     });
    163| 

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[4/6]ΓÄ»

 FAIL  packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute plan_mode_stage
AssertionError: expected 'Error: [vitest] No "TerminalTools" exΓÇª' to contain 'Staged changes for src/index.ts'

- Expected
+ Received

- Staged changes for src/index.ts
+ Error: [vitest] No "TerminalTools" export is defined on the "@borg/tools" mock. Did you forget to return it from "vi.mock"?
+ If you need to partially mock a module, you can use "importOriginal" helper inside:
+

 Γ¥» packages/core/test/CoreInfra.test.ts:166:40
    164|     it('should execute plan_mode_stage', async () => {
    165|         const result = await server.executeTool('plan_mode_stage', { fΓÇª
    166|         expect(result.content[0].text).toContain('Staged changes for sΓÇª
       |                                        ^
    167|     });
    168| 

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[5/6]ΓÄ»

 FAIL  packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute plan_mode_status
AssertionError: expected 'Error: [vitest] No "TerminalTools" exΓÇª' to contain 'Mode: PLAN'

- Expected
+ Received

- Mode: PLAN
+ Error: [vitest] No "TerminalTools" export is defined on the "@borg/tools" mock. Did you forget to return it from "vi.mock"?
+ If you need to partially mock a module, you can use "importOriginal" helper inside:
+

 Γ¥» packages/core/test/CoreInfra.test.ts:171:40
    169|     it('should execute plan_mode_status', async () => {
    170|         const result = await server.executeTool('plan_mode_status', {}ΓÇª
    171|         expect(result.content[0].text).toContain('Mode: PLAN');
       |                                        ^
    172|     });
    173| });

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[6/6]ΓÄ»


[2m Test Files [22m [1m[31m1 failed[39m[22m[90m (1)[39m
[2m      Tests [22m [1m[31m6 failed[39m[22m[90m (6)[39m
[2m   Start at [22m 20:27:17
[2m   Duration [22m 3.59s[2m (transform 403ms, setup 0ms, import 2.30s, tests 59ms, environment 0ms)[22m

